src/components/apps/apps.scss
@import "../utils/styles/base";

.apps {
  height: 100vh;
  min-height: 100vh;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 1000ms;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.card {
  background-size: cover;
  background-position: center;
  position: relative;
  cursor: pointer;
  outline: none;
  transition: scale 100ms;
  text-align: center;

  .card-front-image {
    position: relative;
    z-index: 2;
  }

 .card-image {
    width: clamp(300px, 20vw, 500px);
    aspect-ratio: 9 / 16;
    border-radius: clamp(0.5rem, 0.75vw, 2rem);
  }

  h3 {
    color: whitesmoke;
    font-size: 2em;
    font-family: $font-roboto;
    transform: translateY(-100%);
    opacity: 0;
    transition: opacity 1s;
    transition: all 1s ease;
    position: absolute;
  }
  
  &:hover {
    .card-faders {
      opacity: 1;
    }

    h3 {
      transform: translateY(0);
      opacity: 1;
    }
  }
}

.card-faders {
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0px;
  top: 0px;
  z-index: 1;
  opacity: 0;
  transition: opacity 1500ms;
  pointer-events: none
}

.card:active {
  scale: 0.94;
}

.card-fader {
  position: absolute;
  left: 0px;
  top: 0px;
  animation: spread 3s linear infinite;
}

.card-fader:is(:nth-child(2)) {
  animation-delay: 750ms;
}

.card-fader:is(:nth-child(3)) {
  animation-delay: 1500ms;
}

.card-fader:is(:nth-child(4)) {
  animation-delay: 2250ms;
}

@media(max-width: 1200px) {
  body {    
    justify-content: flex-start;
    align-items: flex-start;
  }
  
  .apps {
    flex-direction: column; 
    align-items: center;
    gap: 4rem;
    padding: 4rem;
  }
  
  .card .card-image {
    width: 400px;    
  }
}

@media(max-width: 600px) {
  .apps {
    gap: 2rem;
    padding: 2rem;
  }
  
  .card {
    width: 80%;    
  }
  
  .card .card-image {
    width: 100%;    
  }
}

@keyframes spread {
  from {
    transform: scale(1, 1);
    opacity: 1;
  }
  to {
    transform: scale(1.3, 0.7);
    opacity: 0;
  }
}

